# trinity

./: .clang-format  .codacy.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  _compact.py  _parse.py  _solut.py  _trigen.py  _trinity.py  style-guidelines.md  style-guidelines.txt
benchmark/: bench_export_gnuplot.py  bench_reduce_data.py  bench_run.py  bench_solut_field.py  bench_stream.py
cmake/: FindHwloc.cmake  FindPAPI.cmake
data/: GRID4.mesh
data/solut/: gauss4.bb  gauss5.bb  shock4.bb  shock5.bb  waves4.bb
docs/: _config.yml  index.md
examples/: adap.cpp  adapt.cpp
examples/mesh/: adap.mesh
examples/solut/: waves5.bb
include/: trinity.h
include/trinity/: coarsening.h  hashtable.h  hashtable.impl.h  header.h  hessian.h  hwcount.h  io.h  matching.h  mesh.h  metric.h  numeric.h  optparse.h  parser.h  partition.h  random_engine.h  refinement.h  rmat.h  smoothing.h  swapping.h  sync.h  timer.h  tools.h
modules/: FindEigen3.cmake  FindHwloc.cmake  FindMetis.cmake  FindPAPI.cmake  FindSpMP.cmake
profile/: compare.gnuplot  repart.gnuplot  runtime.gnuplot
profile/_backup/benchs/: hasw_hyp.gnuplot  hasw_nor.gnuplot  shock_hyp.gnuplot  shock_knl.gnuplot  shock_llc.gnuplot
profile/_backup/imbalance/: imbalance.gnuplot  imbalance_1.eps  imbalance_2.eps  imbalance_3.eps  imbalance_4.eps
profile/_backup/latency/: latency.eps  latency.gnuplot
profile/_backup/performance/: effic_knl.eps  runtime_knl.eps  runtime_total.eps  speedup_knl.eps  speedup_total.eps  time_total.gnuplot
profile/_backup/repart_step/: repart.gnuplot  repart.py  repart_1.eps  repart_2.eps  repart_3.eps  repart_hsw.eps  repart_knl.eps
profile/data/: comp_kernel.xlsx
profile/plots/: comp_dist.eps  compare_gauss.eps  compare_shock.eps  effic.eps  hsw_shock_effic.eps  hsw_shock_elap.eps  hsw_shock_repar_1.eps  hsw_shock_repar_2.eps  hsw_shock_repar_3.eps  hsw_shock_repar_4.eps  runtime.eps
scripts/: bench_export_gnuplot.py  bench_reduce_data.py  bench_solut_field.py  bench_stream.py  example.grf  inti.sh  pcocc.sh  perf.sh  plot_sparsity.py  sparsity.py  stream.py
sources/: Table.h  coarsening.cpp  coarsening.h  coloring.cpp  contraction.cpp  contraction.h  core.h  hashtable.h  hashtable.impl.h  header.h  hessian.cpp  hessian.h  hwcount.cpp  hwcount.h  indep.cpp  indep.h  io.cpp  io.h  lock.h  main.cpp  matching.cpp  matching.h  mesh.cpp  mesh.h  metric.cpp  metric.h  numeric.cpp  numeric.h  optparse.h  partition.cpp  partition.h  random_engine.h  refinement.cpp  refinement.h  rmat.cpp  rmat.h  smoothing.cpp  smoothing.h  swapping.cpp  swapping.h  (+6 more)
src/: coarsening.cpp  hessian.cpp  hwcount.cpp  io.cpp  main.cpp  matching.cpp  mesh.cpp  metric.cpp  numeric.cpp  parser.cpp  partition.cpp  refinement.cpp  rmat.cpp  smoothing.cpp  swapping.cpp  sync.cpp  tools.cpp
